# masm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  run_benchmark_viz.py
.github/ISSUE_TEMPLATE/: benchmark_scenario.md  bug_report.md  feature_request.md
.github/workflows/: smoke.yml
benchmark/: perf_metrics.py  reporter.py  runner.py
benchmark/baselines/: mem0_adapter.py  naive_shared_dict.py
benchmark/datasets/: README.md  code_review.json  customer_support.json  financial_analysis.json  research_team.json
benchmark/scenarios/: s01_dedup.py  s02_conflict.py  s03_staleness.py  s04_attribution.py  s05_scalability.py  s06_relevance.py  s07_forgetting.py  s08_handoff.py  s09_adversarial.py  s10_e2e_workflow.py  scenario_base.py
examples/: quickstart.py  research_vs_factchecker.py  supply_chain_war_room.py
masm/: __init__.py  __main__.py
masm/cognitive/: __init__.py  intent.py  normalizer.py  trust.py  type_classifier.py
masm/coordination/: merge.py  protocols.py  relevance.py
masm/core/: agent.py  clock.py  conflict.py  memory.py  record.py
masm/explain/: __init__.py  conflict_explainer.py
masm/index/: __init__.py  base.py  brute_force.py  hnsw.py
masm/indexing/: __init__.py  entity_attribute.py
masm/integrations/: autogen.py  crewai.py  langchain.py  openai_swarm.py
masm/semantic/: conflict_resolver.py  dedup.py  (+1 more)
tests/: conftest.py  test_benchmark.py  test_clock.py  test_conflict.py  test_dedup.py  test_integration.py  test_memory.py  test_relevance.py  test_store.py  test_stress.py
tools/: visualize.py
(+13 files in other folders)
